--- a/backnest/package.json
+++ b/backnest/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/serve-static": "^2.1.3",
     "bcrypt": "^5.0.0",
     "mongoose": "^5.9.28",
     "passport": "^0.4.1",
