--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "git.ignoreLimitWarning": true,
-  "vsicons.presets.nestjs": true
+  "vsicons.presets.nestjs": true,
+  "vsicons.presets.angular": true
 }
